tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__TempWarpRemoverS-AAAAAAAAAAAAAAAAAAAESw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1099,
  "prerequisites": [
    1055
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This soap is very special. It will remove temporary warp and has a small chance to also remove some normal warp, if you are lucky. Taking a bath first increases your chances.\n\nThis can later be upgraded to remove your permanent warp.\n\n[note]Hint: You need to chisel your tallow block for the recipe to work.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Temp Warp Remover Soap",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1055
  ],
  "rewards": [],
  "tasks": []
}
