tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__TheBESTSoap-Jl453zbkSfC4pl9kglgy6A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3955367670065935080,
  "prerequisites": [
    3515139917016817911
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, you can now reduce your permanent warp.\n\nThe chance to reduce your permanent warp is 10%, increased to 25% if you have the Warp Ward effect and further increased to 40% if you're standing in Purifying Liquid. \n\n[warn]This soap has some side effects. Make sure you have a way to remove your normal (and temporary) warp.[/warn]\n\n",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The BEST Soap!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3515139917016817911
  ],
  "rewards": [],
  "tasks": []
}
