tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__TheDarkRealm-AAAAAAAAAAAAAAAAAAABFw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 279,
  "prerequisites": [
    280
  ],
  "properties": {
    "auto_claim": false,
    "desc": "We found the way... my precious. We found it! Only need 4 tasty eyes, and some magic to open the door. The secret door, they didn't see it. Hehehe! All the time. It was there... Aaaall the time!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Dark Realm",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    280
  ],
  "rewards": [],
  "tasks": []
}
