tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__ThePowerofCreati-AAAAAAAAAAAAAAAAAAABHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 284,
  "prerequisites": [
    283
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What... What am I doing here? Where am I?! What is this place?! Oh those headaches... (It seems that the pulsating pearl you just found cured your brain from... something. Something old, probably some kind of trap to keep away unworthy ones.)\n\n§3/iskamiunlocked will tell you if you have successfully unlocked Kami. If not, try researching the Thaumium Crowbar and the Cursed Spirits Blade. Or other stuff on the vanilla pages. Or in TT. It's not really reliable anymore with all the mods and such.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Power of Creation",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    283
  ],
  "rewards": [],
  "tasks": []
}
