tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__VisChannels-AAAAAAAAAAAAAAAAAAAHyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1994,
  "prerequisites": [
    1992
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This wand augment will lower the vis cost when using your wand by 10 percent. I'm not sure it works, but give it a try and report back, OK?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Vis Channels",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1992
  ],
  "rewards": [],
  "tasks": []
}
